--- a/resources/public/css/get-recommendation.css
+++ b/resources/public/css/get-recommendation.css
@@ -8,6 +8,8 @@
     border: 1px solid #f8d7da;
     margin-right: 38%;
     margin-left: 38%;
+    margin-bottom: 7%;
+    margin-top: 7%;
     color: black;
 }
 
