--- a/resources/public/css/home.css
+++ b/resources/public/css/home.css
@@ -1,7 +1,7 @@
 .home {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: url('/images/background.jpg') center/cover no-repeat;
     display: flex;
     justify-content: center;
