--- a/resources/public/css/recommendations.css
+++ b/resources/public/css/recommendations.css
@@ -38,6 +38,11 @@
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease
+}
+
+.clothing-item:hover {
+  transform: scale(1.1);
 }
 
 .btn-container {
