--- a/resources/public/css/recommendations.css
+++ b/resources/public/css/recommendations.css
@@ -35,7 +35,7 @@
 .clothing-item {
   width: 150px;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
   transition: 0.3s ease
