--- a/resources/public/css/home.css
+++ b/resources/public/css/home.css
@@ -27,3 +27,31 @@
     border-radius: 10px;
     text-align: center;
 }
+
+/* USER INFO BLOK */
+.user-info-container {
+  margin-top: 28px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-icon {
+  color: #cb5b85;
+}
+
+.user-signed-in-label {
+  margin-top: 8px;
+  color: #ddd;
+  font-size: 14px;
+}
+
+.user-select {
+  margin-top: 6px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid #444;
+  background: #222;
+  color: white;
+}
+
